

==============================
Release 2.8.?.0
==============================
2018-05-05    Add methods to the UI class to get direct or descendants children without a condition


==============================
Release 2.8.0.0
==============================
2018-04-13    Change references to the UIAComWrapper using the open source alternatives from GitHub/NuGet


==============================
Release 2.7.2.0
==============================
2016-07-01    Catch exceptions from the MS automation framework to please the "with" timeout settings


==============================
Release 2.7.0.0
==============================
2016-06-20    Use alternative UI search methods to prevent memory leaks caused by the TreeWalker


==============================
Release 2.6.2.0
==============================
2016-02-27    Adjust usage of the keybd_event for key down and up


==============================
Release 2.6.1.0
==============================
2016-02-13    Adjust mouse_event signatur used in the MouseEx which causes the visual studio debugger to crash
              Remove usage of the AutomationElement.GetClickablePoint. This on some machines sometimes causes crashes


==============================
Release 2.6.0.0
==============================
2015-12-24    Update 3rdParty libraries to have it stand-alone
2015-12-23    Remove mouse move in the ColorDetector
              Add different overloads for GetColor
              Fix wrong WinApi call for typing a single key using the KeyboardEx
              Add missing methods to the KeyboardEx
              Add SelectedText property to the BasicEdit
2015-12-22    The MouseEx now can set the current cursor position either instantly, or from a point over a period of time
              Add PressButtons and ReleaseButtons to the MouseEx (Together with Move drag & drop can be simulated)
2015-12-21    Ready implemented the new KeyboardEx to work without the MSTest CodedUI framework running