@@ -69,6 +69,7 @@
     <Compile Include="UITests.cs" />
     <Compile Include="Utilities\ColorDetectorTests.cs" />
     <Compile Include="Utilities\DynamicSleepTests.cs" />
+    <Compile Include="Utilities\PatternsTests.cs" />
     <Compile Include="Utilities\WindowFocusTests.cs" />
     <Compile Include="Utilities\WindowSetupTests.cs" />
     <Compile Include="WindowFinderTests.cs" />
@@ -78,9 +79,6 @@
       <Project>{745bb700-4c9e-4afe-ae22-7f1c5acc5f3c}</Project>
       <Name>DW.CodedUI</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
